# dataxi

./: .gitignore  LICENSE  MANIFEST.in  README.md  local_debug.sh  pyproject.toml  setup.cfg  setup.py  setup_helper.py  upload_pypi.sh  upload_pypi_test.sh
.github/workflows/: lint.yml  pylint.yml
dataxi/: __init__.py  cred_mgr.py  cred_mgr_cli.py  save_secret.py
dataxi/connectors/: __init__.py  backup.py  conn_cli.py  mysql_connector.py
dataxi/cred_mgr/: __init__.py  cred_mgr.py  cred_mgr_cli.py  cred_sender.py
src/: __init__.py  main.py  save_secret.py
src/connectors/: mysql_connector.py
src/dataxi/: __init__.py  save_secret.py
src/dataxi/connectors/: __init__.py
src/package/: mysql_connector.py
