[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataxi"
dynamic = ["version"]
description = "Dataxi is a cross-DBMS server tool that can help you centralize the data extraction and transfer from different data sources."
readme = "README.md"
license = {text = "MIT License"}
keywords = ['ETL', 'database', 'credential']
authors = [{name = "Yuan Yuan", email = "yyccphil@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Database :: Front-Ends",
    "Topic :: Security"
]
dependencies = []
requires-python = ">=3.6"

[project.optional-dependencies]
mysql = ["pymysql"]
mssql = ["pymssql"]
clickhouse = ["clickhouse_connect"]
postgresql = ["psycopg2>=2.7"]
splunk = ["requests"]

[tool.setuptools.packages.find]
include = ["dataxi*"]

[project.scripts]
cred_mgr = "dataxi.cred_mgr.cred_mgr_cli:main"
dataxi = "dataxi.connectors.conn_cli:main"

[project.urls]
"Project" = "https://github.com/yyccPhil/dataxi"
Documentation = "https://github.com/yyccPhil/dataxi/wiki"

[tool.setuptools.dynamic]
version = {file = "VERSION"}
